--- a/main.css
+++ b/main.css
@@ -4,21 +4,27 @@
 }
 
 section {
-  margin: 25px 0px;
+  margin: 50px 0px;
+}
+
+footer {
+  margin: 50px 0 0 0;
 }
 
 h1 {
   text-align: center;
+  font-family: "Shrikhand", cursive;
 }
 
 #titre {
   font-family: "Roboto", sans-serif;
 }
 
-#accueil #accueil_part_1 {
+#accueil_part_1 {
   background-color: #f6f6f6;
+  padding-bottom: 20px;
 }
-#accueil #accueil_part_1 #accueil_part_1_1 p {
+#accueil_part_1 #accueil_part_1_1 p {
   text-align: center;
   background-color: #eaeaea;
   padding: 15px 0;
@@ -28,10 +34,178 @@ h1 {
   font-size: 16px;
   color: #353535;
 }
-#accueil #accueil_part_1 #accueil_part_1_1 p::before {
+#accueil_part_1 #accueil_part_1_1 p::before {
   font-family: "Font Awesome 5 Free";
   content: "\f81d";
 }
-#accueil #accueil_part_1 #accueil_part_1_2 p {
+#accueil_part_1 #accueil_part_1_2 h2 {
+  margin-top: 20px;
   text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 28px;
+  font-weight: bold;
+}
+#accueil_part_1 #accueil_part_1_2 p {
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  color: #7d7d7d;
+  margin-bottom: 20px;
+}
+#accueil_part_1 #accueil_part_1_2 button {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  background-color: #d86cdb;
+  border: none;
+  padding: 15px;
+  font-size: 18px;
+  color: white;
+  font-family: "Roboto", sans-serif;
+  border-radius: 25px;
+  width: 250px;
+}
+
+#accueil_part_2 h2 {
+  font-family: "Roboto", sans-serif;
+  font-size: 28px;
+  font-weight: bold;
+  margin-left: 20px;
+}
+#accueil_part_2 div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  gap: 25%;
+  margin: 0 auto;
+  background-color: #f6f6f6;
+  height: 80px;
+  width: 90%;
+  border-radius: 25px;
+  -webkit-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+  margin-top: 20px;
+}
+#accueil_part_2 div .bulle {
+  font-family: "Roboto", sans-serif;
+  background-color: #9356dc;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: white;
+}
+#accueil_part_2 div p {
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+}
+#accueil_part_2 div #txt_accueil_part_2_1::before {
+  font-family: "Font Awesome 5 Free";
+  content: "\f81d";
+}
+#accueil_part_2 div #txt_accueil_part_2_2::before {
+  font-family: "Font Awesome 5 Free";
+  content: "\f81d";
+}
+#accueil_part_2 div #txt_accueil_part_2_3::before {
+  font-family: "Font Awesome 5 Free";
+  content: "\f81d";
+}
+
+#accueil_part_3 h2 {
+  font-family: "Roboto", sans-serif;
+  font-size: 28px;
+  font-weight: bold;
+  margin: 0 0 20px 20px;
+}
+#accueil_part_3 #container_carte {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+}
+#accueil_part_3 #container_carte .carte {
+  display: block;
+  margin: 0 auto;
+  background-color: white;
+  padding: 5px;
+  border-radius: 15px;
+  height: 250px;
+  width: 85%;
+  -webkit-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+}
+#accueil_part_3 #container_carte .carte .img_carte {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  width: 100%;
+  height: 75%;
+}
+#accueil_part_3 #container_carte .carte #restaurants_img1 {
+  background: url(/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg) repeat center center;
+  background-size: cover;
+}
+#accueil_part_3 #container_carte .carte #restaurants_img2 {
+  background: url(/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg) repeat center center;
+  background-size: cover;
+}
+#accueil_part_3 #container_carte .carte #restaurants_img3 {
+  background: url(/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg) repeat center center;
+  background-size: cover;
+}
+#accueil_part_3 #container_carte .carte #restaurants_img4 {
+  background: url(/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg) repeat center center;
+  background-size: cover;
+}
+#accueil_part_3 #container_carte .carte h4 {
+  margin: 10px 0 0 5px;
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+}
+#accueil_part_3 #container_carte .carte p {
+  margin: 5px 0 0 5px;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+}
+#accueil_part_3 #container_carte .carte button {
+  float: right;
+  margin-top: -40px;
+  font-family: "Font Awesome 5 Free";
+  font-size: 30px;
+  border: none;
+}
+#accueil_part_3 #container_carte .carte button::hover {
+  font-weight: bold;
+  color: red;
+}
+
+footer {
+  background-color: #353535;
+  padding: 18px 0 18px 18px;
+}
+footer #titre {
+  color: white;
+  font-family: "Shrikhand", cursive;
+  font-size: 22px;
+}
+footer p {
+  color: white;
+  font-family: "Roboto", sans-serif;
+  margin-top: 10px;
 }
