--- a/main.scss
+++ b/main.scss
@@ -4,14 +4,20 @@
 }
 
 section{
-    margin: 25px 0px;
+    margin: 50px 0px;
 }
-
+footer{
+    margin: 50px 0 0 0;
+}
 h1{
     text-align: center;
+    font-family: 'Shrikhand', cursive;
 }
 
 #titre{
     font-family: 'Roboto', sans-serif;
 }
-@import "css/accueil.scss";
+@import "css/accueil_part_1.scss";
+@import "css/accueil_part_2.scss";
+@import "css/accueil_part_3.scss";
+@import "css/footer.scss";
