--- a/css/accueil_part_3.scss
+++ b/css/accueil_part_3.scss
@@ -1,9 +1,9 @@
 #accueil_part_3{
     h2{
         font-family: 'Roboto', sans-serif;
-        font-size: 28px;
+        font-size: 24px;
         font-weight: bold;
-        margin: 0 0 20px 20px;
+        margin: 5px 30px;
     }
 
     #container_carte{
@@ -24,7 +24,7 @@
                 border-top-left-radius: 10px;
                 border-top-right-radius: 10px;
                 width: 100%;
-                height: 75%;
+                height: 78%;
             }
             #restaurants_img1{
                 background: url(/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg) repeat center center;
@@ -45,12 +45,12 @@
             h4{
                 margin: 10px 0 0 5px;
                 font-family: 'Roboto', sans-serif;
-                font-size: 18px;
+                font-size: 16px;
             }
             p{
                 margin: 5px 0 0 5px;
                 font-family: 'Roboto', sans-serif;
-                font-size: 16px;
+                font-size: 14px;
             }
             button{
                 float: right;
