--- a/menu.scss
+++ b/menu.scss
@@ -4,12 +4,6 @@
     margin: 0;
 }
 
-section{
-    margin: 50px 0px;
-}
-footer{
-    margin: 50px 0 0 0;
-}
 h1{
     text-align: center;
     font-family: 'Shrikhand', cursive;
@@ -18,7 +12,6 @@ h1{
 #titre{
     font-family: 'Roboto', sans-serif;
 }
-@import "css/accueil_part_1.scss";
-@import "css/accueil_part_2.scss";
-@import "css/accueil_part_3.scss";
+@import "css/menu_part_1.scss";
+@import "css/menu_part_2.scss";
 @import "css/footer.scss";
