--- a/menu.css
+++ b/menu.css
@@ -357,22 +357,56 @@ h1 {
 
 #menu_part_1 #img_menu_part_1 {
   width: auto;
-  height: 200px;
+  height: 400px;
   background: url(/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg) repeat center center;
   background-size: cover;
   z-index: 1;
 }
 
+h2 {
+  margin: 20px;
+  font-size: 24px;
+  font-family: "Shrikhand", cursive;
+}
+h2 i {
+  float: right;
+  font-family: "Font Awesome 5 Free";
+  font-size: 25px;
+  font-weight: 100;
+}
+
 #menu_part_2 {
-  display: block;
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
   height: auto;
   width: auto;
-  margin-top: -20px;
   padding: 10px;
   z-index: 9;
   background-color: #f6f6f6;
+  margin-top: -25px;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+}
+#menu_part_2 #menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+@media (orientation: portrait) {
+  #menu_part_2 #menu {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+#menu_part_2 .contain_menu {
+  width: 100%;
 }
 #menu_part_2 h3 {
   line-height: 35px;
@@ -382,36 +416,361 @@ h1 {
   font-family: "Roboto", sans-serif;
   color: #7b7b7b;
   width: 40px;
+  margin-left: 15px;
+}
+#menu_part_2 #menu_entrees_1 {
+  opacity: 0;
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
+  -webkit-animation-name: carte_menu_apparition;
+          animation-name: carte_menu_apparition;
+  -webkit-animation-delay: 0.25s;
+          animation-delay: 0.25s;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+#menu_part_2 #menu_plats_1 {
+  opacity: 0;
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
+  -webkit-animation-name: carte_menu_apparition;
+          animation-name: carte_menu_apparition;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+#menu_part_2 #menu_desserts_1 {
+  opacity: 0;
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
+  -webkit-animation-name: carte_menu_apparition;
+          animation-name: carte_menu_apparition;
+  -webkit-animation-delay: 1.75s;
+          animation-delay: 1.75s;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+#menu_part_2 #menu_entrees_2 {
+  opacity: 0;
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
+  -webkit-animation-name: carte_menu_apparition;
+          animation-name: carte_menu_apparition;
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+#menu_part_2 #menu_plats_2 {
+  opacity: 0;
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
+  -webkit-animation-name: carte_menu_apparition;
+          animation-name: carte_menu_apparition;
+  -webkit-animation-delay: 1.25s;
+          animation-delay: 1.25s;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+#menu_part_2 #menu_desserts_2 {
+  opacity: 0;
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
+  -webkit-animation-name: carte_menu_apparition;
+          animation-name: carte_menu_apparition;
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+#menu_part_2 #menu_entrees_3 {
+  opacity: 0;
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
+  -webkit-animation-name: carte_menu_apparition;
+          animation-name: carte_menu_apparition;
+  -webkit-animation-delay: 0.75s;
+          animation-delay: 0.75s;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+#menu_part_2 #menu_plats_3 {
+  opacity: 0;
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
+  -webkit-animation-name: carte_menu_apparition;
+          animation-name: carte_menu_apparition;
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+#menu_part_2 #menu_desserts_3 {
+  opacity: 0;
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
+  -webkit-animation-name: carte_menu_apparition;
+          animation-name: carte_menu_apparition;
+  -webkit-animation-delay: 2.25s;
+          animation-delay: 2.25s;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+#menu_part_2 #menu_entrees_4 {
+  opacity: 0;
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
+  -webkit-animation-name: carte_menu_apparition;
+          animation-name: carte_menu_apparition;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+#menu_part_2 #menu_plats_4 {
+  opacity: 0;
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
+  -webkit-animation-name: carte_menu_apparition;
+          animation-name: carte_menu_apparition;
+  -webkit-animation-delay: 1.75s;
+          animation-delay: 1.75s;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+#menu_part_2 #menu_desserts_4 {
+  opacity: 0;
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
+  -webkit-animation-name: carte_menu_apparition;
+          animation-name: carte_menu_apparition;
+  -webkit-animation-delay: 2.5s;
+          animation-delay: 2.5s;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+@-webkit-keyframes carte_menu_apparition {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+@keyframes carte_menu_apparition {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
 }
 #menu_part_2 .carte_menu {
   width: auto;
-  padding: 5px 10px;
-  margin: 5px 0;
+  margin: 10px;
+  border-radius: 10px;
   background-color: white;
+  -webkit-box-shadow: 2px 2px 2px 1px rgba(0, 0, 255, 0.2);
+          box-shadow: 2px 2px 2px 1px rgba(0, 0, 255, 0.2);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
-#menu_part_2 .carte_menu .nom_du_menu {
+#menu_part_2 .carte_menu:hover .contenu {
+  -webkit-animation-name: carte_menu_hover;
+          animation-name: carte_menu_hover;
+  -webkit-animation-duration: 0.35s;
+          animation-duration: 0.35s;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+#menu_part_2 .carte_menu:hover .icon {
+  -webkit-animation-name: icon_hover;
+          animation-name: icon_hover;
+  -webkit-animation-duration: 0.35s;
+          animation-duration: 0.35s;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+#menu_part_2 .carte_menu:hover i {
+  -webkit-animation-name: check;
+          animation-name: check;
+  -webkit-animation-duration: 0.5s;
+          animation-duration: 0.5s;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+}
+#menu_part_2 .carte_menu .contenu {
+  width: 95%;
+  padding: 5px 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+#menu_part_2 .carte_menu .contenu .nom_du_menu {
   font-family: "Roboto", sans-serif;
   font-weight: 600;
   font-size: 14px;
 }
-#menu_part_2 .carte_menu .description_du_menu {
+#menu_part_2 .carte_menu .contenu .description_du_menu {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   font-size: 12px;
   color: #404040;
 }
 #menu_part_2 .carte_menu .prix_du_menu {
+  width: 40px;
+  margin-top: 12px;
   font-family: "Roboto", sans-serif;
   font-weight: 600;
   font-size: 14px;
-  float: right;
-  margin-top: -23px;
 }
-#menu_part_2 button {
+#menu_part_2 .carte_menu .icon {
+  width: 0%;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  background-color: #99e2d0;
+  overflow: hidden;
+}
+#menu_part_2 .carte_menu .icon i {
+  width: 15px;
+  height: 15px;
+  position: absolute;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  top: 15%;
+  color: white;
+  font-family: "Font Awesome 5 Free";
+  font-size: 15px;
+  background-color: white;
+  border-radius: 50%;
+  padding: 5px;
+  color: #99e2d0;
+}
+
+button {
   display: block;
   margin: 30px auto;
   text-align: center;
-  background-color: #d86cdb;
+  background: -webkit-gradient(linear, left top, left bottom, from(#ff66cc), to(#9966cc));
+  background: linear-gradient(#ff66cc, #9966cc);
   border: none;
   padding: 15px;
   font-size: 18px;
@@ -421,6 +780,47 @@ h1 {
   width: 150px;
 }
 
+@-webkit-keyframes carte_menu_hover {
+  100% {
+    width: 80%;
+  }
+}
+
+@keyframes carte_menu_hover {
+  100% {
+    width: 80%;
+  }
+}
+@-webkit-keyframes icon_hover {
+  100% {
+    width: 15%;
+  }
+}
+@keyframes icon_hover {
+  100% {
+    width: 15%;
+  }
+}
+@-webkit-keyframes check {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+@keyframes check {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
 footer {
   background-color: #353535;
   padding: 18px 0 18px 18px;
